--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Frontend Dev Course</title>
-		<link rel="stylesheet" href="static/css/main.css" />
+		<link rel="stylesheet" href="/static/css/main.css" />
 	</head>
 	<body>
 		<div class="container">
 			<header>
 				<img
-					src="static/images/logo2-01.jpg"
+					src="/static/images/logo2-01.jpg"
 					alt="23andfour logo"
 					class="logo"
 				/>
@@ -19,7 +19,7 @@
 				<nav>
 					<a href="#" class="hide-desktop">
 						<img
-							src="static/images/ham.svg"
+							src="/static/images/ham.svg"
 							alt="toggle menu"
 							class="menu"
 							id="menu"
@@ -28,7 +28,7 @@
 
 					<ul class="show-desktop hide-mobile" id="nav">
 						<li id="exit" class="exit-btn hide-desktop">
-							<img src="static/images/exit.svg" alt="exit menu" />
+							<img src="/static/images/exit.svg" alt="exit menu" />
 						</li>
 						<!-- <li><a href="#">Inicio</a></li> -->
 						<li><a class="hovers" href="#">Servicios</a></li>
@@ -40,7 +40,7 @@
 
 			<section>
 				<img
-					src="static/images/prueba.png"
+					src="/static/images/prueba.png"
 					alt="server graphic"
 					class="server"
 				/>
@@ -51,7 +51,7 @@
 				</p>
 
 				<img
-					src="static/images/logo3-01 (4).png"
+					src="/static/images/logo3-01 (4).png"
 					alt="scroll down"
 					class="scroll hide-mobile show-desktop"
 				/>
@@ -62,13 +62,13 @@
 			<div class="container">
 				<ul>
 					<li class="auto">
-						<img src="static/images/escanea.png" alt="Calendar icon" />
+						<img src="/static/images/escanea.png" alt="Calendar icon" />
 					</li>
 					<li class="auto">
-						<img src="static/images/ordena.png" alt="Calendar icon" />
+						<img src="/static/images/ordena.png" alt="Calendar icon" />
 					</li>
 					<li class="auto">
-						<img src="static/images/abona.png" alt="Calendar icon" />
+						<img src="/static/images/abona.png" alt="Calendar icon" />
 					</li>
 				</ul>
 			</div>
@@ -80,7 +80,7 @@
 					<li>
 						<figure>
 							<img
-								src="static/images/user1.png"
+								src="/static/images/user1.png"
 								alt="User testimonial picture"
 							/>
 							<blockquote>
@@ -96,7 +96,7 @@
 					<li>
 						<figure>
 							<img
-								src="static/images/user2.png"
+								src="/static/images/user2.png"
 								alt="User testimonial picture"
 							/>
 							<blockquote>
@@ -116,7 +116,7 @@
 
 		<div class="container">
 			<h2>Comenzá a ofrecer otra forma de ordenar.</h2>
-			<a href="#" class="cta">¡Crea tu tienda!</a>
+			<a href="/backoffice/stores/create" class="cta">¡Crea tu tienda!</a>
 		</div>
 
 		<footer>
@@ -124,7 +124,7 @@
 				<div class="container">
 					<a href="#">
 						<img
-							src="static/images/logowaitlessblanco.png"
+							src="/static/images/logowaitlessblanco.png"
 							class="logo"
 							alt="logo"
 						/>
