Added login button to the landing page

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 			<a href="/backoffice/stores/create" class="flex-c-m s1-txt2 size3 how-btn" style="color: white;">
 				Crear una tienda
 			</a>
+
+			<a href="/auth/login" class="flex-c-m s1-txt2 size3 how-btn" style="color: white; margin-top: 20px;">
+				Iniciar sesion
+			</a>
 		</div>
 
 		<span class="s1-txt3 txt-center">
